--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <li><a href="#features">My Work</a></li>
                 <li><a href="#motion">Motion Work</a></li>
                 <li><a href="#connect">Connect</a></li>
-                <li><a href="https://www.youtube.com/@MotionGridPranav" target="_blank" class="external-link">Youtube</a></li>
+                <li><a href="https://drive.google.com/file/d/1J39pbMeYZHJ8itb5fg7sPqTMfkEhojGj/view?usp=sharing" target="_blank" class="external-link">PDF Portfolio</a></li>
 </ul>
             </ul>
             <div class="mobile-menu-toggle">
@@ -55,7 +55,7 @@
             <a href="#features">My Work</a>
             <a href="#motion">Motion Work</a>
             <a href="#connect">Connect</a>
-            <a href="https://www.youtube.com/channel/UCf5tTSUukqFc0MH5nDoaWdQ" target="_blank" class="external-link">Youtube</a>
+            <a href="https://drive.google.com/file/d/1J39pbMeYZHJ8itb5fg7sPqTMfkEhojGj/view?usp=sharing" target="_blank" class="external-link">PDF Portfolio</a>
         </div>
     </header>
 
@@ -194,4 +194,5 @@
     </footer>
 <script src="templatemo-neural-scripts.js"></script>
 </body>
+
 </html>
