--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <li><a href="#home">Home</a></li>
                 <li><a href="#features">My Work</a></li>
                 <li><a href="#motion">Motion Work</a></li>
-                <li><a href="#connect">Connect</a></li>
+                <li><a href="https://www.behance.net/pranavsood22">Behance</a></li>
                 <li><a href="https://drive.google.com/file/d/1Mt5EwHaAbW03lWc228idadDYvSo8ca4n/view?usp=sharing" target="_blank" class="external-link">PDF Portfolio</a></li>
 </ul>
             </ul>
@@ -54,7 +54,7 @@
             <a href="#home">Home</a>
             <a href="#features">My Work</a>
             <a href="#motion">Motion Work</a>
-            <a href="#connect">Connect</a>
+            <a href="https://www.behance.net/pranavsood22">Behance</a>
             <a href="https://drive.google.com/file/d/1Mt5EwHaAbW03lWc228idadDYvSo8ca4n/view?usp=sharing" target="_blank" class="external-link">PDF Portfolio</a>
         </div>
     </header>
@@ -196,4 +196,5 @@
 </body>
 
 </html>
+
 
